
  [ Adam Gandelman ]
  * Ensure /etc/nova/rootwrap.d/ is only writable by root, ensure
    those permissions on /etc/nova/rootwrap.conf as well as
    all individual filter configurations.

  [ Chuck Short ]
  * Fix lintian warnings
  * debian/*.lograote: compress logfiles when they are rotated. (LP:
    #1049915)
  * debian/control: Suggest ceph-common for nova-volume.

 -- Adam Gandelman <adamg@canonical.com>  Mon, 10 Sep 2012 11:59:25 -0700

nova (2012.2~rc1~20120907.15996-0ubuntu1) quantal; urgency=low

  [ Chuck Short ]
  * New upstream release.
  * debian/nova-common.postinst: Drop nova_sudoers permission changing
    since we do it in the debian/rules. (LP: #995285)

  [ Soren Hansen ]
  * Update debian/watch to account for symbolically named tarballs and
    use newer URL.
  * Fix Launchpad URLs in debian/watch.

 -- Chuck Short <zulcss@ubuntu.com>  Fri, 07 Sep 2012 17:49:53 -0500

nova (2012.2~rc1~20120827.15815-0ubuntu1) quantal; urgency=low

  [ Adam Gandelman ]
  * New upstream release.

  [ Chuck Short ]
  * debian/patches/0001-Update-tools-hacking-for-pep8-1.2-and-
    beyond.patch: Dropped we dont run pep8 tests anymore.
  * debian/control: Drop pep8 build depends
  * debian/*.upstart.in: Make sure we transition correctly from runlevel
    1 to 2. (LP: #820694)

 -- Adam Gandelman <adamg@canonical.com>  Mon, 27 Aug 2012 15:37:18 -0700

nova (2012.2~f3-0ubuntu1) quantal; urgency=low

  [ Chuck Short ]
  * New upstream version.
  * debian/rules: Re-enable testsuite.
  * debian/control:
    - Add python-quantumclient as a build depends.
    - Bump standards to 3.9.3
    - Fix lintian warnings.
    - Recommend python-glanceclient and python-keystoneclient.
    - Add dependency of iptables for nova-network.
  * debian/watch: Update
  * debian/rules: Do not run pep8 tests since upstream is still using an
    older pep8.
  * debian/patches/0001-Update-tools-hacking-for-pep8-1.2-and-
    beyond.patch: Get the testsuite running again.