@@ -1,20 +1,0 @@
-.TH nova\-vncproxy 8
-.SH NAME
-nova\-vncproxy \- nova VNC console proxy
-
-.SH SYNOPSIS
-.B nova\-vncproxy
-.B \-\-config-file=<config-filepath>
-
-.SH DESCRIPTION
-.B nova\-vncproxy
-
-This man page is a stub. Please contribute.
-
-.SH PARAMETERS
-
-.LP
-.B \-\-config-file=<config-filepath>
-.IP
-
-Path to the file containing options.
