@@ -1,1 +1,0 @@
-debian/mans/nova-vncproxy.8
