@@ -1,18 +1,0 @@
-description "Nova VNC proxy"
-author "Vishvananda Ishaya <vishvananda@gmail.com>"
-
-start on runlevel [2345]
-stop on runlevel [016]
-
-
-chdir /var/run
-
-pre-start script
-	mkdir -p /var/run/nova
-	chown nova:root /var/run/nova/
-
-	mkdir -p /var/lock/nova
-	chown nova:root /var/lock/nova/
-end script
-
-exec su -s /bin/sh -c "exec nova-xvpvncproxy --config-file=/etc/nova/nova.conf" nova
