@@ -1,7 +1,0 @@
-/var/log/nova/nova-vncproxy.log {
-    daily
-    missingok
-    compress
-    delaycompress
-    notifempty
-}
